...
            <point key="canvasLocation" x="3748" y="489"/>
        </scene>
        <!--FEV Data Reading-->
        <scene sceneID="Zkv-jZ-bh1">
            <objects>
                <navigationController id="VFE-DH-9Ne" customClass="FEVNavViewController" customModule="AsthmaHelper" customModuleProvider="target" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="FEV Data Reading" image="second" selectedImage="second" id="whD-Eh-bhE"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="grX-4Q-LDb">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <connections>
                        <segue destination="qXu-Al-bjg" kind="relationship" relationship="rootViewController" id="JvZ-zU-cnO"/>
...
            <point key="canvasLocation" x="1619" y="430"/>
        </scene>
        <!--FVC Data Reading-->
        <scene sceneID="dQZ-7O-adD">
            <objects>
                <navigationController id="GQM-cI-3sD" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="FVC Data Reading" image="second" selectedImage="second" id="ShU-cM-qkJ"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="W3z-lf-FGr">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <connections>
                        <segue destination="qXu-Al-bjg" kind="relationship" relationship="rootViewController" id="CwE-fW-riM"/>
...
            <point key="canvasLocation" x="1204" y="1180"/>
        </scene>
        <!--My Info-->
        <scene sceneID="b3D-i6-TOG">
            <objects>
                <navigationController id="VPy-JZ-wvF" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="My Info" image="first" id="K7T-ri-VUB"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Ce1-W6-vnc">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <connections>
                        <segue destination="Sfy-Cg-prH" kind="relationship" relationship="rootViewController" id="HtK-OU-oVb"/>
...
                    <navigationItem key="navigationItem" title="My Info" id="Kj9-rL-olQ">
                        <barButtonItem key="leftBarButtonItem" title="Cancel" id="Iq2-pr-dDD">
                            <connections>
                                <action selector="cancelAction:" destination="Sfy-Cg-prH" id="QpM-wg-hd2"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" title="Done" id="32e-zd-XXJ">
                            <connections>
                                <action selector="doneAction:" destination="Sfy-Cg-prH" id="M6x-zW-uO6"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
...
            </objects>
            <point key="canvasLocation" x="-8" y="-78"/>
        </scene>
        <!--Trend-->
        <scene sceneID="lbJ-ot-4x4">
            <objects>
                <tableViewController title="Trend" id="mRa-9a-Sws" customClass="TrendTableViewController" customModule="AsthmaHelper" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="FOY-tL-zhO">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                        <sections>
                            <tableViewSection id="4yS-0l-IIC">
...
