...
                        msg = msg + ": " + error.localizedDescription
                    }
                    ControllerUtil.displayAlert(self, title: "Error", msg: msg )
                }
                readings?.deleteReading(toBeDeletedReading.id, successHandler: successClosure, failHandler: failClosure)
            } else {
                ControllerUtil.displayAlert(self, title: "Delete Data", msg: "Error deleting data: Cannot delete data that is not generated by this app. \n The data can be deleted inside Apple's Health app")
            }
        } else if editingStyle == .Insert {
            // Create a new instance of the appropriate class, insert it into the array, and add a new row to the table view
        }    
    }
    
    func displayAlert(title: String, msg: String) -> Void {
        let alert = UIAlertController.init(title: title, message: msg, preferredStyle: UIAlertControllerStyle.Alert)
        let action = UIAlertAction(title: "OK", style: .Default, handler: nil)
        alert.addAction(action)
        self.presentViewController(alert, animated: true, completion: nil)
    }
    

    /*
...
